--- a/docs/spec/types/code.mdx
+++ b/docs/spec/types/code.mdx
@@ -14,11 +14,14 @@ import Schema from "@site/docs/spec/types/code.schema.json";
 
 ## Code Type
 
-Indicates that the value is taken from a set of controlled strings defined elsewhere. Technically, a code is restricted to a string which has at least one character and no leading or trailing whitespace, and where there is no whitespace other than single spaces in the contents.
+Indicates that the value is taken from a set of controlled strings defined elsewhere. Technically, a code is restricted
+to a string which has at least one character and no leading or trailing whitespace, and where there is no whitespace
+other than single spaces in the contents.
 
 ## Scope
 
-This data type is intended to represent a finite set of controlled strings which represents a specific, discrete concept, element or idea.
+This data type is intended to represent a finite set of controlled strings which represents a specific, discrete
+concept, element or idea.
 
 ## Structure
 
