Standardize data type header orderings
Drop unnecessary data types stub page

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/docs/spec/types/code.mdx
+++ b/docs/spec/types/code.mdx
@@ -16,8 +16,6 @@ Indicates that the value is taken from a set of controlled strings defined elsew
 to a string which has at least one character and no leading or trailing whitespace, and where there is no whitespace
 other than single spaces in the contents.
 
-## Scope
-
 This data type is intended to represent a finite set of controlled strings which represents a specific, discrete
 concept, element or idea.
 
@@ -37,3 +35,11 @@ Type: `string`
     </CodeBlock>
   </TabItem>
 </Tabs>
+
+## Implementation Notes
+
+TBD
+
+## References
+
+TBD
