--- a/docs/spec/types/project_bundle.mdx
+++ b/docs/spec/types/project_bundle.mdx
@@ -16,25 +16,11 @@ import Schema from "@site/docs/spec/types/project_bundle.schema.json";
 
 A set of one or more permits related to an activity.
 
-## Overview
-
 A project is defined by an activity with one or more permits. Grouping of a primary authorization with secondary or associated authorizations that are triggered or required by the primary authorization. For example: major mine permit (primary) and associated auxiliary (secondary) permits such as License to Cut, Water Use, and or Road Use.
 
 ## Scope
 
 This data type is intended to represent a grouping of related permits that are related to a specific activity.
-
-## Notes
-
-TBD
-
-## Constraints
-
-TBD
-
-## References
-
-TBD
 
 ## Structure
 
@@ -61,3 +47,11 @@ TBD
     </CodeBlock>
   </TabItem>
 </Tabs>
+
+## Implementation Notes
+
+TBD
+
+## References
+
+TBD
