Added preliminary process tracking section.
Definitions are still a WIP

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/docs/spec/schemas/core.mdx
+++ b/docs/spec/schemas/core.mdx
@@ -15,6 +15,10 @@ import Schema from "@site/docs/spec/schemas/core.schema.json";
 
 This data schema provides a standard set of values for Natural Resource Sector core permitting data.
 
+:::info
+This schema is currently under revision for scope and content.
+:::
+
 ## Scope
 
 The schema is intended to be used in general transactional situations. It comprises of the minimum set of data required to coherently represent a permit and their immediately related attributes.
