Allow sidebar to be collapsible by user
Add admonition note to reference all supported front matter fields

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/docs/docusaurus/tutorial_basics/markdown_features.mdx
+++ b/docs/docusaurus/tutorial_basics/markdown_features.mdx
@@ -31,6 +31,10 @@ Markdown text with [links](./hello.md)
 We recommend that all markdown pages should have at minimum a `title`, `description` and `tags` array defined. An `id`
 may be specified, but can be derived off of the filename when omitted.
 
+:::info
+A complete listing of Docusaurus supported front matter fields can be found [here](https://docusaurus.io/docs/api/plugins/@docusaurus/plugin-content-docs#markdown-front-matter).
+:::
+
 ## Links
 
 Regular Markdown links are supported, using url paths or relative file paths.
