--- a/docs/spec/data/process.mdx
+++ b/docs/spec/data/process.mdx
@@ -26,7 +26,11 @@ Loosely taking inspiration from [HL7 Timing](https://www.hl7.org/fhir/datatypes.
 
 | Name | Cardinality | Type | Description & Constraints |
 | --- | --- | --- | --- |
-| TBD | 1..1 | `string` | TBD |
+| class | 1..* | `string` | TBD |
+| concept | 1..1 | `string` | TBD |
+| description | 0..1 | `string` | TBD |
+| status | 0..1 | `string` | TBD |
+| status_code | 0..1 | `string` | TBD |
 
 ## Specification
 
