--- a/docs/spec/resource/process_event.mdx
+++ b/docs/spec/resource/process_event.mdx
@@ -26,7 +26,8 @@ Loosely taking inspiration from [HL7 Timing](https://www.hl7.org/fhir/datatypes.
 
 | Name | Cardinality | Type | Description & Constraints |
 | --- | --- | --- | --- |
-| TBD | 1..1 | `string` | TBD |
+| event | 1..1 | [Event](../data/event) | An event concept. This attribute should solely describe the raw known factual information a specific temporal event. |
+| process | 1..1 | [Process](../data/process) | An process tracking concept. This attribute should represent the core concept of a defined process. |
 
 ## Specification
 
