--- a/docs/spec/data/code.mdx
+++ b/docs/spec/data/code.mdx
@@ -10,7 +10,8 @@ import CodeBlock from "@theme/CodeBlock";
 import JSONSchemaViewer from "@theme/JSONSchemaViewer";
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
-import Schema from "@site/docs/spec/data/code.schema.json";
+
+import schema from "@site/docs/spec/data/code.schema.json";
 
 Indicates that the value is taken from a set of controlled strings defined elsewhere. Technically, a code is restricted
 to a string which has at least one character and no leading or trailing whitespace, and where there is no whitespace
@@ -27,11 +28,11 @@ Type: `string`
 
 <Tabs queryString="tab">
   <TabItem value="schema" label="Schema" default>
-    <JSONSchemaViewer schema={Schema} viewerOptions={{ showExamples: true }} />
+    <JSONSchemaViewer schema={schema} viewerOptions={{ showExamples: true }} />
   </TabItem>
   <TabItem value="source" label="Source">
     <CodeBlock language="json" showLineNumbers>
-      {JSON.stringify(Schema, null, 2)}
+      {JSON.stringify(schema, null, 2)}
     </CodeBlock>
   </TabItem>
 </Tabs>
