--- a/docs/spec/data/project_bundle.mdx
+++ b/docs/spec/data/project_bundle.mdx
@@ -11,8 +11,8 @@ import JSONSchemaViewer from "@theme/JSONSchemaViewer";
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-import Example from "@site/docs/spec/data/project_bundle.example.json";
-import Schema from "@site/docs/spec/data/project_bundle.schema.json";
+import example from "@site/docs/spec/data/project_bundle.example.json";
+import schema from "@site/docs/spec/data/project_bundle.schema.json";
 
 A set of one or more permits related to an activity.
 
@@ -34,16 +34,16 @@ This data type is intended to represent a grouping of related permits that are r
 
 <Tabs queryString="tab">
   <TabItem value="schema" label="Schema" default>
-    <JSONSchemaViewer schema={Schema} viewerOptions={{ showExamples: true }} />
+    <JSONSchemaViewer schema={schema} viewerOptions={{ showExamples: true }} />
   </TabItem>
   <TabItem value="source" label="Source">
     <CodeBlock language="json" showLineNumbers>
-      {JSON.stringify(Schema, null, 2)}
+      {JSON.stringify(schema, null, 2)}
     </CodeBlock>
   </TabItem>
   <TabItem value="example" label="Example">
     <CodeBlock language="json" showLineNumbers>
-      {JSON.stringify(Example, null, 2)}
+      {JSON.stringify(example, null, 2)}
     </CodeBlock>
   </TabItem>
 </Tabs>
