Graft over shared libs from jy95 to add support for resolving $ref
Most of these TS files are grafted over verbatim from the
jy95/docusaurus-json-schema-plugin repository as it provides a succinct
way of acquiring and then rendering nested JSON schemas

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/docs/spec/resource/process_event.mdx
+++ b/docs/spec/resource/process_event.mdx
@@ -11,7 +11,7 @@ import JSONSchemaViewer from "@theme/JSONSchemaViewer";
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-import generateResolverOptions from "@site/src/components/shared/generateResolverOptions";
+import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/resource/process_event.example.json";
 import schema from "@site/docs/spec/resource/process_event.schema.json";
 
