--- a/docs/spec/data/project_bundle.mdx
+++ b/docs/spec/data/project_bundle.mdx
@@ -11,6 +11,7 @@ import JSONSchemaViewer from "@theme/JSONSchemaViewer";
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
+import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/data/project_bundle.example.json";
 import schema from "@site/docs/spec/data/project_bundle.schema.json";
 
@@ -34,7 +35,11 @@ This data type is intended to represent a grouping of related permits that are r
 
 <Tabs queryString="tab">
   <TabItem value="schema" label="Schema" default>
-    <JSONSchemaViewer schema={schema} viewerOptions={{ showExamples: true }} />
+    <JSONSchemaViewer
+      resolverOptions={generateResolverOptions({ "remote": true })}
+      schema={schema}
+      viewerOptions={{ showExamples: true }}
+    />
   </TabItem>
   <TabItem value="source" label="Source">
     <CodeBlock language="json" showLineNumbers>
