Introduce a maturity model and label artifacts with emojis and badges
The PIES standard is maturing at different rates for different aspects and
elements. Having a maturity model defined allows there to be expectations
for implementors to perform a proper risk assessment for adopting parts
of the specification.

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/docs/spec/data/header.mdx
+++ b/docs/spec/data/header.mdx
@@ -1,6 +1,6 @@
 ---
 id: header
-title: Header
+title: Header 📝
 description: Standard message header attributes present for all PIES message data types
 tags:
   - developer
@@ -14,6 +14,8 @@ import TabItem from "@theme/TabItem";
 import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/data/header.example.json";
 import schema from "@site/docs/spec/data/header.schema.json";
+
+![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)
 
 Standard message header attributes present for all PIES message data types. All defined attributes are needed for
 identification and attribution.
