--- a/docs/spec/data/parcel_id.mdx
+++ b/docs/spec/data/parcel_id.mdx
@@ -1,6 +1,6 @@
 ---
 id: parcel_id
-title: Parcel Identifier
+title: Parcel Identifier 📝
 description: An identifier for a specific area with clear boundaries.
 tags:
   - developer
@@ -14,6 +14,8 @@ import TabItem from "@theme/TabItem";
 import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/data/parcel_id.example.json";
 import schema from "@site/docs/spec/data/parcel_id.schema.json";
+
+![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)
 
 An identifier for a specific area with clear boundaries.
 
