--- a/docs/spec/data/process.mdx
+++ b/docs/spec/data/process.mdx
@@ -1,6 +1,6 @@
 ---
 id: process
-title: Process
+title: Process ⏳
 description: Represents a process tracking concept.
 tags:
   - developer
@@ -14,6 +14,8 @@ import TabItem from "@theme/TabItem";
 import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/data/process.example.json";
 import schema from "@site/docs/spec/data/process.schema.json";
+
+![Maturity:Candidate](https://img.shields.io/badge/Maturity-Candidate-green)
 
 Represents a process tracking concept.
 
