--- a/docs/spec/message/process_event_set.mdx
+++ b/docs/spec/message/process_event_set.mdx
@@ -1,6 +1,6 @@
 ---
 id: process_event_set
-title: Process Event Set
+title: Process Event Set 📝
 description: Represents a set of process events associated to a specific record
 tags:
   - business
@@ -15,6 +15,8 @@ import TabItem from "@theme/TabItem";
 import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/message/process_event_set.example.json";
 import schema from "@site/docs/spec/message/process_event_set.schema.json";
+
+![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)
 
 Represents a set of process events associated to a specific record.
 
