--- a/docs/spec/resource/process_event.mdx
+++ b/docs/spec/resource/process_event.mdx
@@ -1,6 +1,6 @@
 ---
 id: process_event
-title: Process Event
+title: Process Event ⏳
 description: Represents a process concept at a specific event in time.
 tags:
   - developer
@@ -14,6 +14,8 @@ import TabItem from "@theme/TabItem";
 import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/resource/process_event.example.json";
 import schema from "@site/docs/spec/resource/process_event.schema.json";
+
+![Maturity:Candidate](https://img.shields.io/badge/Maturity-Candidate-green)
 
 Represents a process concept at a specific event in time.
 
