--- a/docs/spec/data/code.mdx
+++ b/docs/spec/data/code.mdx
@@ -1,6 +1,6 @@
 ---
 id: code
-title: Code
+title: Code ⏳
 description: A code type.
 tags:
   - developer
@@ -14,6 +14,8 @@ import TabItem from "@theme/TabItem";
 import { generateResolverOptions } from "@site/src/components/shared";
 import schema from "@site/docs/spec/data/code.schema.json";
 
+![Maturity:Candidate](https://img.shields.io/badge/Maturity-Candidate-green)
+
 Indicates that the value is taken from a set of controlled strings defined elsewhere. Technically, a code is restricted
 to a string which has at least one character and no leading or trailing whitespace, and where there is no whitespace
 other than single spaces in the contents.
@@ -25,7 +27,7 @@ concept, element or idea.
 
 | Attribute | Value | Description & Constraints |
 | --- | --- | --- |
-| Type | `string` | |
+| Type | `string` | Shall be represented in UTF-8 format, as specified in [RFC 3629](https://datatracker.ietf.org/doc/html/rfc3629), which is an extension of the [ISO 10646-1](https://www.iso.org/standard/76835.html) standard. |
 | Regex Pattern | `^[^\s]+( [^\s]+)*$` | String which has at least one character and no leading or trailing whitespace, and where there is no whitespace other than single spaces in the contents. |
 
 ## Specification
