--- a/docs/spec/data/event.mdx
+++ b/docs/spec/data/event.mdx
@@ -1,6 +1,6 @@
 ---
 id: event
-title: Event
+title: Event ⏳
 description: Represents an event concept.
 tags:
   - developer
@@ -17,6 +17,8 @@ import exampleDateStart from "@site/docs/spec/data/event.example.date_start.json
 import exampleDateTimeRange from "@site/docs/spec/data/event.example.datetime_range.json";
 import exampleDateTimeStart from "@site/docs/spec/data/event.example.datetime_start.json";
 import schema from "@site/docs/spec/data/event.schema.json";
+
+![Maturity:Candidate](https://img.shields.io/badge/Maturity-Candidate-green)
 
 Represents an event concept. It allows either a date or a datetime, but not a mix of both. One of the start properties is required, but the end properties are optional.
 
