--- a/docs/spec/data/project_bundle.mdx
+++ b/docs/spec/data/project_bundle.mdx
@@ -1,6 +1,6 @@
 ---
 id: project_bundle
-title: Project Bundle
+title: Project Bundle 🚧
 description: A set of one or more permits related to an activity.
 tags:
   - developer
@@ -14,6 +14,8 @@ import TabItem from "@theme/TabItem";
 import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/data/project_bundle.example.json";
 import schema from "@site/docs/spec/data/project_bundle.schema.json";
+
+![Maturity:Planning](https://img.shields.io/badge/Maturity-Planning-orange)
 
 A set of one or more permits related to an activity.
 
