--- a/docs/spec/message/record_linkage.mdx
+++ b/docs/spec/message/record_linkage.mdx
@@ -1,6 +1,6 @@
 ---
 id: record_linkage
-title: Record Linkage
+title: Record Linkage 🚧
 description: Represents an assertion for a specific record to be related or linked together
 tags:
   - business
@@ -15,6 +15,8 @@ import TabItem from "@theme/TabItem";
 import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/message/record_linkage.example.json";
 import schema from "@site/docs/spec/message/record_linkage.schema.json";
+
+![Maturity:Planning](https://img.shields.io/badge/Maturity-Planning-orange)
 
 Represents an assertion for specific records to be related or linked together.
 
