Add hyperlinks to maturity section
Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/docs/spec/data/code.mdx
+++ b/docs/spec/data/code.mdx
@@ -14,7 +14,7 @@ import TabItem from "@theme/TabItem";
 import { generateResolverOptions } from "@site/src/components/shared";
 import schema from "@site/docs/spec/data/code.schema.json";
 
-![Maturity:Candidate](https://img.shields.io/badge/Maturity-Candidate-green)
+[![Maturity:Candidate](https://img.shields.io/badge/Maturity-Candidate-green)](../overview#maturity)
 
 Indicates that the value is taken from a set of controlled strings defined elsewhere. Technically, a code is restricted
 to a string which has at least one character and no leading or trailing whitespace, and where there is no whitespace
