--- a/docs/spec/data/header.mdx
+++ b/docs/spec/data/header.mdx
@@ -15,7 +15,7 @@ import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/data/header.example.json";
 import schema from "@site/docs/spec/data/header.schema.json";
 
-![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)
+[![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)](../overview#maturity)
 
 Standard message header attributes present for all PIES message data types. All defined attributes are needed for
 identification and attribution.
