--- a/docs/spec/data/parcel_id.mdx
+++ b/docs/spec/data/parcel_id.mdx
@@ -15,7 +15,7 @@ import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/data/parcel_id.example.json";
 import schema from "@site/docs/spec/data/parcel_id.schema.json";
 
-![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)
+[![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)](../overview#maturity)
 
 An identifier for a specific area with clear boundaries.
 
