--- a/docs/spec/data/process.mdx
+++ b/docs/spec/data/process.mdx
@@ -15,7 +15,7 @@ import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/data/process.example.json";
 import schema from "@site/docs/spec/data/process.schema.json";
 
-![Maturity:Candidate](https://img.shields.io/badge/Maturity-Candidate-green)
+[![Maturity:Candidate](https://img.shields.io/badge/Maturity-Candidate-green)](../overview#maturity)
 
 Represents a process tracking concept.
 
