--- a/docs/spec/data/project_bundle.mdx
+++ b/docs/spec/data/project_bundle.mdx
@@ -15,7 +15,7 @@ import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/data/project_bundle.example.json";
 import schema from "@site/docs/spec/data/project_bundle.schema.json";
 
-![Maturity:Planning](https://img.shields.io/badge/Maturity-Planning-orange)
+[![Maturity:Planning](https://img.shields.io/badge/Maturity-Planning-orange)](../overview#maturity)
 
 A set of one or more permits related to an activity.
 
