--- a/docs/spec/message/process_event_set.mdx
+++ b/docs/spec/message/process_event_set.mdx
@@ -16,7 +16,7 @@ import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/message/process_event_set.example.json";
 import schema from "@site/docs/spec/message/process_event_set.schema.json";
 
-![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)
+[![Maturity:Draft](https://img.shields.io/badge/Maturity-Draft-yellow)](../overview#maturity)
 
 Represents a set of process events associated to a specific record.
 
