--- a/docs/spec/message/record_linkage.mdx
+++ b/docs/spec/message/record_linkage.mdx
@@ -16,7 +16,7 @@ import { generateResolverOptions } from "@site/src/components/shared";
 import example from "@site/docs/spec/message/record_linkage.example.json";
 import schema from "@site/docs/spec/message/record_linkage.schema.json";
 
-![Maturity:Planning](https://img.shields.io/badge/Maturity-Planning-orange)
+[![Maturity:Planning](https://img.shields.io/badge/Maturity-Planning-orange)](../overview#maturity)
 
 Represents an assertion for specific records to be related or linked together.
 
