--- a/docs/spec/data/event.mdx
+++ b/docs/spec/data/event.mdx
@@ -1,6 +1,6 @@
 ---
 id: event
-title: Event ⏳
+title: Event 🔬
 description: Represents an event concept.
 tags:
   - developer
@@ -18,7 +18,7 @@ import exampleDateTimeRange from "@site/docs/spec/data/event.example.datetime_ra
 import exampleDateTimeStart from "@site/docs/spec/data/event.example.datetime_start.json";
 import schema from "@site/docs/spec/data/event.schema.json";
 
-[![Maturity:Candidate](https://img.shields.io/badge/Maturity-Candidate-green)](../overview#maturity)
+[![Maturity:Trial](https://img.shields.io/badge/Maturity-Trial-green)](../overview#maturity)
 
 Represents an event concept. It allows either a date or a datetime, but not a mix of both. One of the start properties is required, but the end properties are optional.
 
